# glicol

./: .gitignore  Cargo.toml  LICENSE  README.md  build.bat  build.sh  package-lock.json  package.json  temp  test.sh
core/: Cargo.toml
core/examples/: graph2.rs  node_def.rs  parsing.rs  play_sin.rs  sidechain.rs  synth.rs
core/src/: lib.rs
core/src/parser/: mod.rs
core/src/synth/: graph.rs  graph2.rs  graph3.rs  mod.rs  node.rs  node2.rs
rs/: Cargo.toml  README.md
rs/audio/: Cargo.toml
rs/audio/src/: lib.rs
rs/audio/src/effect/: delayn.rs
rs/audio/src/filter/: apfdecay.rs  apfgain.rs  comb.rs  lpf.rs
rs/audio/src/oscillator/: sin_osc.rs
rs/audio/src/sampling/: choose.rs
rs/audio/src/signal/: const_sig.rs
rs/bela/: Cargo.toml  README.md  _main.glicol  build.rs  build.sh  copy.sh  dist.sh  hello.glicol  linker.sh  run.sh  setup.sh
rs/bela/.cargo/: config
rs/bela/examples/: glicol.rs  glicol16.rs  glicol32.rs  glicol64.rs
rs/bela/src/: error.rs  lib.rs
rs/dasp_graph/: LICENSE-MIT  README.md
rs/dasp_graph/examples/: basic.rs  msg.rs
rs/dasp_graph/src/: buffer.rs
rs/dasp_graph/src/node/: boxed.rs  delay.rs  graph.rs  mod.rs  pass.rs  signal.rs  sum.rs
rs/dasp_graph/tests/: graph_types.rs
rs/ext/: Cargo.toml  README.md
rs/ext/examples/: procmacro.rs
rs/ext/src/: amplfo.rs  kick.rs  lib.rs  macros.rs  nodes.rs  plate.rs
rs/js/src/: glicol_wasm.wasm
rs/macro/: Cargo.toml
rs/macro/src/: lib.rs
rs/macros/: Cargo.toml
rs/macros/src/: lib.rs
rs/main/: Cargo.toml  README.md  nodes.rs
rs/main/benches/: bench.rs
rs/main/examples/: am.rs  apis.rs  bench.rs  elapsed.rs  expr.rs  hello.rs  helloam.rs  helloconst.rs  hellonoise.rs  helloworld.rs  input.rs  macros.rs  makechain.rs  makeedge.rs  modifynode.rs  msg_synth.rs  noise.rs  p_synth.rs  plot.rs  plot_indielib.rs  plot_livecoding.rs  plot_update.rs  plpf.rs  raw.rs  rawvsmacro.rs  standalone.rs  update.rs
rs/main/src/: error.rs  lib.rs  synth.rs  util.rs  utili.rs
rs/main/src/node/filter/: comb.rs  onepole.rs
rs/main/src/node/sampling/: sampler.rs
rs/main/src/node/signal/: imp.rs
rs/main/tests/: error.rs  livecoding.rs  node.rs  parser.rs  sin.rs
rs/parser/: Cargo.toml
rs/parser/examples/: choose.rs  hello.rs  lcs.rs  pattern.rs  psampler.rs  seq.rs  test.rs
rs/parser/src/: glicol.pest  glicol2.pest  lib.rs  nodes.rs  tests.rs  util.rs
rs/parser/tests/: all_nodes.rs  pest.rs  sin.rs
rs/parser2/examples/: diff.rs  parsing.rs
rs/synth/: Cargo.toml  README.md
rs/synth/benches/: fm.rs  next_block.rs
rs/synth/examples/: chain.rs  connect.rs  freeverb.rs  gnode.rs  hello copy.rs  hello.rs  hi.rs  plot-am.rs  plot-g.rs  plot-imp.rs  plot.rs  plot2.rs  plot3.rs  plot4.rs  plot_psynth.rs  rbtest.rs  sin.rs
rs/synth/examples/_/: rbtest.rs  sound.rs
rs/synth/log/: clock_in_node.md  ref_as_node.md
rs/synth/src/: buffer.rs  context.rs  graph.rs  lib.rs  macros.rs  mono_sum.rs  pass.rs
rs/synth/src/dynamic/: closure.rs  mod.rs  script.rs
rs/synth/src/effect/: balance.rs  delay.rs  delayn.rs  mod.rs  pan.rs  plate.rs
rs/synth/src/envelope/: envperc.rs  mod.rs  shape.rs
rs/synth/src/filter/: apfdecay.rs  apfgain.rs  comb.rs  mod.rs  onepole.rs  rhpf.rs  rlpf.rs
rs/synth/src/node/: boxed.rs  mod.rs  pass.rs  sum.rs
rs/synth/src/node/compound/: bd.rs  hh.rs  mod.rs  sawsynth.rs  sn.rs  squsynth.rs  trisynth.rs
rs/synth/src/node/delay/: delay_ms.rs  delay_n.rs  delayms.rs  delayms2.rs  delayn.rs  delayn2.rs  mod.rs
rs/synth/src/node/dynamic/: eval.rs  expr.rs  meta.rs  mod.rs
rs/synth/src/node/effect/: balance.rs  mod.rs  pan.rs  plate.rs  reverb.rs
rs/synth/src/node/envelope/: adsr.rs  envperc.rs  mod.rs
rs/synth/src/node/filter/: apfmsgain.rs  mod.rs  onepole.rs  rhpf.rs  rlpf.rs
rs/synth/src/node/operator/: add.rs  mod.rs  mul.rs
rs/synth/src/node/oscillator/: blep.rs  blsaw_osc.rs  mod.rs  saw_osc.rs  sin_osc.rs  squ_osc.rs  tri_osc.rs
rs/synth/src/node/sampling/: mod.rs  psampler.rs  sampler.rs
rs/synth/src/node/sequencer/: arrange.rs  choose.rs  mod.rs  seq.rs  speed.rs
rs/synth/src/node/signal/: constsig.rs  imp.rs  mod.rs  noise.rs  points.rs
rs/synth/src/node/synth/: mod.rs  msgsynth.rs  pattern_synth.rs
rs/synth/src/operation/: add.rs  map.rs  mod.rs  mul.rs  script.rs  shape.rs
rs/synth/src/oscillator/: mod.rs  saw_osc.rs  sin_osc.rs  squ_osc.rs  tri_osc.rs
rs/synth/src/sampling/: choose.rs  sampler.rs  seq.rs  speed.rs
rs/synth/src/signal/: adc.rs  const_sig.rs  dummy.rs  imp.rs  mod.rs  noise.rs  phasor.rs  phasor0.rs
rs/vst/: Cargo.toml  README.md
rs/vst/scripts/: m1.sh  macos-build-and-install.sh  osx_vst_bundler.sh
rs/vst/src/: lib.rs
rs/wasm/: Cargo.toml  build.bat  build.sh  movewasm.bat
rs/wasm/src/: lib.rs
rs/wip/dasp_graph/: Cargo.toml
rs/wip/dasp_graph/examples/: counter.rs  edge_order.rs  phasor.rs
rs/wip/dasp_graph/src/: lib.rs
rs/wip/dasp_graph/src/node/: graph.rs  mod.rs  pass.rs
rs/wip/dasp_graph/tests/: graph_send.rs  sum.rs
rs/wip/glicol/: Cargo.toml
rs/wip/glicol/examples/: hello.rs  raw.rs  t1.rs
rs/wip/glicol/src/: lib.rs  parser.rs
rs/wip/glicol/src/synth/: mod.rs  operator.rs  oscillator.rs  signal.rs
rs/wip/js/: README.md  index.html  package-lock.json
rs/wip/js/src/: glicol-engine.js  glicol_wasm.wasm
rs/wip/macros/: Cargo.toml
rs/wip/main/: Cargo.toml
rs/wip/main/examples/: hello.rs  raw.rs
rs/wip/main/src/: lib.rs  synth.rs
rs/wip/main/src/synth/: mod.rs  operator.rs  oscillator.rs  signal.rs
rs/wip/main/src/synth1/: mod.rs  oscillator.rs
rs/wip/parser/: Cargo.toml
rs/wip/parser/examples/: hello.rs  lcs.rs
rs/wip/parser/src/: glicol.pest  glicol2.pest  lib.rs  main.rs
rs/wip/parser2/: Cargo.toml
rs/wip/parser2/src/: lib.rs
rs/wip/synth/: Cargo.toml
rs/wip/synth/examples/: 0-hello.rs  1-chain.rs  counter.rs  hello-chain.rs  hello-raw.rs  hello.rs  msg.rs  nodeid.rs  nodeid2.rs  plot2.rs
rs/wip/synth/src/: context.rs  graph.rs  lib.rs
rs/wip/synth/src/node/: add.rs  (+5 more)
rs/wip/wasm/: Cargo.toml  build.sh
rs/wip/wasm/src/: lib.rs
(+288 files in other folders)
