[package]
name = "glicol-wasm"
version = "0.1.0"
authors = ["chaosprint <chaosprint@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
lazy_static = "1.2.0"
pest = "2.0"
pest_derive = "2.0"
dasp_graph = "0.11.0"
dasp_signal = "0.11.0"
dasp_slice = "0.11.0"
dasp_interpolate = { version = "*", features = ["linear"] }
petgraph = "*"
glicol = { path = "../glicol" }