[package]
name = "glicol"
version = "0.1.0"
authors = ["chaosprint <chaosprint@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.0"
pest_derive = "2.0"
dasp_graph = "0.11.0"
dasp_signal = "0.11.0"
dasp_slice = "0.11.0"
dasp_interpolate = { version = "*", features = ["linear"] }
petgraph = "*"
gnuplot = "0.0.37"
freeverb = { path = "../freeverb-rs/src/freeverb" }

#getrandom = "*"
#[target.'cfg(target_arch = "wasm32")'.dependencies]
#getrandom = { version = "0.1.9", features = ["dummy"] }