[workspace]
default-members = ["main"]
exclude = ["wasm"]
members = ["main", "parser", "synth", "macros"]

[workspace.package]
version = "0.13.3"
edition = "2021"
repository = "https://github.com/chaosprint/glicol.git"
authors = ["Qichao Lan <chaosprint@gmail.com>"]

[workspace.dependencies]
petgraph = { version = "0.6",  features = ["stable_graph"] }
dasp_slice = { version = "0.11.0", default-features = false, features = ["std"] }
dasp_ring_buffer = "0.11.0"
dasp_signal = "0.11.0"
dasp_interpolate = { version = "0.11.0", features = ["linear", "sinc"] }
hashbrown = "0.13.1"
arrayvec = "0.7.2"
rhai = { version = "1.12.0", default-features = false, features = ["sync", "f32_float", "only_i32"]  }
fasteval = "0.2.4"
pest = "2.1.3"
pest_derive = "2.1.0"
lcs-diff = "0.1.1"