[workspace]
default-members = ["main"]
members = ["main", "parser", "synth", "wasm"]
resolver = "1"

[workspace.package]
version = "0.13.5"
edition = "2021"
repository = "https://github.com/chaosprint/glicol.git"
authors = ["Qichao Lan <chaosprint@gmail.com>"]

[workspace.dependencies]
petgraph = { version = "0.6", default-features = false,  features = ["stable_graph"] }
dasp_slice = { version = "0.11.0", default-features = false, features = [
    "std",
] }
dasp_ring_buffer = { version = "0.11.0", default-features = false }
dasp_signal = { version = "0.11.0", default-features = false }
dasp_interpolate = { version = "0.11.0", default-features = false, features = ["linear", "sinc"] }
hashbrown = "0.14.3"
rhai = { version = "1.12.0", default-features = false, features = [
    "sync",
    "f32_float",
    "only_i32",
] }
fasteval = "0.2.4"
pest = "2.7.9"
pest_derive = "2.7.9"
yoke = { version = "0.7.3", default-features = false, features = ["derive", "alloc"] }

[profile.wasm-release]
inherits = "release"
opt-level = 'z'   # Optimize for size.
lto = "fat"       # Enable Link Time Optimization
codegen-units = 1 # Reduce number of codegen units to increase optimizations.
panic = 'abort'   # Abort on panic
