[package]
name = "bela"
version = "0.1.0"
edition = "2015"

[dependencies]
libc = "0.2"
nix = "0.10"
glicol = { path = "../main", features = ["bela"]}

[dependencies.bela-sys]
git = "https://github.com/padenot/bela-sys"

[profile.release]
opt-level = 'z'     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic