[package]
name = "glicol_ext"
version = "0.1.0"
authors = ["chaosprint <chaosprint@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glicol_synth = {path="../synth"}
glicol_macro = {path="../macro"}
glicol_parser = {path="../parser"}
pest = "2.0"
pest_derive = "2.0"
quote = "*"
dasp_graph = {path="../../../dasp/dasp_graph"}