[package]
name = "glicol_macro"
version = "0.1.0"
authors = ["chaosprint <chaosprint@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
# syn = {features=["full","extra-traits"]}
quote = "*"
pest = "2.0"
pest_derive = "2.0"
proc-macro2 = "1.0.27"

glicol_synth = {path="../synth"}
glicol_parser = {path="../parser"}
dasp_graph = { path = "../dasp_graph" }