[package]
name = "glicol_macros"
version = "0.13.2"
edition = "2021"
keywords = [
	"audio",
    "music",
	"DSP",
	"synth",
    "synthesizer"
]

license-file = "LICENSE"
description = "Macros for Glicol engine."
repository = "https://github.com/chaosprint/glicol.git"
authors = ["Qichao Lan <chaosprint@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = "1.0.86"
quote = "1.0.15"
proc-macro2 = "1.0.43"