[package]
name = "glicol"
version = "0.13.2"
edition = "2021"
keywords = [
	"audio",
    "music",
	"DSP",
	"synth",
    "synthesizer"
]

license-file = "LICENSE"
description = "Glicol language main entry point."
repository = "https://github.com/chaosprint/glicol.git"
authors = ["Qichao Lan <chaosprint@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
use-samples = []
use-meta = []
bela = []

[dependencies]
petgraph = { workspace = true }
# dasp_graph = { path = "../dasp_graph" }
# glicol_parser = { version = "0.13.2" }
glicol_parser = { path = "../parser" }
# glicol_synth = { version = "0.13.2", features = ["use-samples", "use-meta"]} 
glicol_synth = { path = "../synth", features = ["use-samples", "use-meta"]} 
# glicol_macros = "0.13.2"
glicol_macros = { path = "../macros" }
lcs-diff = { workspace = true }
pest = { workspace = true }
hashbrown = { workspace = true }
# cargo build --target wasm32-unknown-unknown --release

[dev-dependencies]
gnuplot = "0.0.37"
# petgraph = { version = "0.6",  features = ["stable_graph"] }
cpal = "0.14.0"
anyhow = "1.0.63"