[package]
name = "glicol"
version = { workspace = true }
edition = { workspace = true }
keywords = ["audio", "music", "DSP", "synth", "synthesizer"]

license-file = "LICENSE"
description = "Glicol language main entry point."
repository = "https://github.com/chaosprint/glicol.git"
authors = ["Qichao Lan <chaosprint@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
use-samples = []
use-meta = []
bela = []

[dependencies]
petgraph = { workspace = true }
# glicol_parser = { path = "../parser" }
glicol_parser = { version = "0.13.4" }
# glicol_synth = { path = "../synth", features = ["use-samples", "use-meta"] }
glicol_synth = { version = "0.13.4", features = ["use-samples", "use-meta"] }
# glicol_macros = { path = "../macros" }
glicol_macros = { version = "0.13.4" }
lcs-diff = { workspace = true }
pest = { workspace = true }
hashbrown = { workspace = true }
# cargo build --target wasm32-unknown-unknown --release

[dev-dependencies]
gnuplot = "0.0.37"
# petgraph = { version = "0.6",  features = ["stable_graph"] }
cpal = "0.14.0"
anyhow = "1.0.63"
