[package]
name = "glicol_parser"
version = "0.13.0"
edition = "2021"
keywords = [
	"audio",
    "music",
	"DSP",
	"synth",
    "synthesizer"
]

license-file = "LICENSE"
description = "Parser for Glicol language."
repository = "https://github.com/chaosprint/glicol.git"
authors = ["Qichao Lan <chaosprint@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.1.3"
pest_derive = "2.1.0"
glicol_macros = { version = "0.13.0"}#, path="../macros"}
glicol_synth = { version = "0.13.0"}#, path="../synth" }
hashbrown = "0.13.1"
meval = "0.2"