[package]
name = "glicol_parser"
version = "0.13.2"
edition = "2021"
keywords = [
	"audio",
    "music",
	"DSP",
	"synth",
    "synthesizer"
]

license-file = "LICENSE"
description = "Parser for Glicol language."
repository = "https://github.com/chaosprint/glicol.git"
authors = ["Qichao Lan <chaosprint@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = { workspace = true }
pest_derive = { workspace = true }
# glicol_macros = { version = "0.13.2"}
glicol_macros = { path = "../macros" }
# glicol_synth = { version = "0.13.2"}
glicol_synth = { path = "../synth" }
hashbrown = { workspace = true }
fasteval = { workspace = true }