[package]
name = "glicol_synth"
version = "0.12.8"
edition = "2021"
keywords = [
	"audio",
    "music",
	"DSP",
	"synth",
    "synthesizer"
]
readme = "README.md"
license-file = "LICENSE"
description = "A graph-based music DSP library written in Rust"
repository = "https://github.com/chaosprint/glicol.git"
authors = ["Qichao Lan <chaosprint@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["node-boxed", "node-pass", "node-sum"]
use-samples = ["node-sampling"]
use-meta = ["node-dynamic"]
node-boxed = []
node-pass = []
node-sampling = []
node-dynamic = ["rhai"]
node-sum = ["dasp_slice"]

[dependencies]
# glicol_macros = { path = "../macros"}
petgraph = { version = "0.6",  features = ["stable_graph"] }
dasp_slice = { version = "0.11.0", default-features = false, features = ["std"], optional = true }
dasp_ring_buffer = "0.11.0"
dasp_signal = "0.11.0"
dasp_interpolate = { version = "0.11.0", features = ["linear", "sinc"] }
hashbrown = "0.12"
arrayvec = "0.7.2"
rhai = { version = "1.6.0", features = ["sync", "f32_float", "only_i32"], optional = true  }
freeverb = { git = "https://github.com/irh/freeverb-rs"}

[dev-dependencies]
gnuplot = "0.0.37"
petgraph = { version = "0.6",  features = ["stable_graph"] }
cpal = "0.14.0"
anyhow = "1.0.63"