[package]
name = "glicol_synth"
version = { workspace = true }
edition = { workspace = true }
keywords = [
	"audio",
    "music",
	"DSP",
	"synth",
    "synthesizer"
]
readme = "README.md"
license-file = "LICENSE"
description = "A graph-based music DSP library written in Rust"
repository =  { workspace = true }
authors =  { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["node-boxed", "node-pass", "node-sum"]
use-samples = ["node-sampling"]
use-meta = ["node-dynamic"]
node-boxed = []
node-pass = []
node-sampling = []
node-dynamic = ["rhai"]
node-sum = ["dasp_slice"]

[[bench]]
name = "next_block"
harness = false

[[bench]]
name = "fm"
harness = false

[dependencies]
petgraph = { workspace = true }
dasp_slice = { workspace = true, optional = true }
dasp_ring_buffer = { workspace = true  }
dasp_signal = { workspace = true  }
dasp_interpolate = { workspace = true  }
hashbrown = { workspace = true  }
arrayvec = { workspace = true  }
rhai = { workspace = true, optional = true  }
fasteval = { workspace = true }

[dev-dependencies]
gnuplot = "0.0.37"
criterion = "0.4.0"
# petgraph = { version = "0.6",  features = ["stable_graph"] }
# cpal = "0.14.0"
# anyhow = "1.0.63"