[package]
name = "glicol-vst"
version = "0.1.0"
authors = ["chaosprint <chaosprint@gmail.com>"]
edition = "2018"

[dependencies]
vst = "0.2.1"
dasp_graph = { path = "../dasp_graph" }
glicol_synth =  { path = "../synth" }
glicol_parser =  { path = "../parser" }
glicol_ext =  { path = "../ext" }
glicol_macro =  { path = "../macro" }

[lib]
name = "helloglicol"
crate-type = ["cdylib"]