[package]
name = "glicol-wasm"
version = "0.1.0"
authors = ["chaosprint <chaosprint@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
glicol = { path = "../main", features = ["use-samples", "use-meta"] }
wee_alloc = "0.4.5"

[profile.release]
opt-level = "z"
debug = false
lto = true
codegen-units = 1
panic = "abort"
strip = true
incremental = false
