[package]
name = "glicol-wasm"
version = "0.1.0"
authors = ["chaosprint <chaosprint@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
lazy_static = "1.2.0"
glicol = { path = "../main", features = ["use-samples", "use-meta"] }
pest = { workspace = true }
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2.92"
