[package]
name = "glicol-wasm"
version = "0.1.0"
authors = ["chaosprint <chaosprint@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
lazy_static = "1.2.0"
glicol = { path = "../main", features = ["use-samples", "use-meta", "wasm-bindgen"] }
pest = { workspace = true }
wasm-bindgen = { version = "0.2.92", default-features = false }
