[package]
name = "glicol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
petgraph = "0.5.1"
dasp_graph = { path = "../../dasp_graph" }
glicol_parser = { path = "../parser" }


# cargo build --target wasm32-unknown-unknown --release