[package]
name = "glicol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
petgraph = { version = "0.6",  features = ["stable_graph"] }
# dasp_graph = { path = "../dasp_graph" }
glicol_parser = { path = "../parser" }
glicol_synth = { path = "../synth" }
lcs-diff = "*"
pest = "*"

# cargo build --target wasm32-unknown-unknown --release