[package]
name = "glicol_synth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["node-boxed", "node-pass", "node-sum"]
node-boxed = []
node-pass = []
node-sum = ["dasp_slice"]

[dependencies]
petgraph = { version = "0.6",  features = ["stable_graph"] }
dasp_slice = { version = "0.11", default-features = false, features = ["std"], optional = true }

[dev-dependencies]
petgraph = { version = "0.6",  features = ["stable_graph"] }